add basic template, styles

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 {% block content %}
 <section class="graphic">
   <header>
-    <h1 class="font-l">Spring Membership 2015 Donors</h1>
+    <h1 class="font-xxl">Spring Membership 2015 Donors</h1>
   </header>
 
   <article class="prose">
@@ -21,7 +21,51 @@
     "major donors."
     </p>
   </article>
-  <article class="test"></article>
+  <article class="member-group">
+    <header>
+      <h2>Student: $10</h2>
+    </header>
+    <div class="student"></div>
+  </article>
+  <article class="member-group">
+    <header>
+      <h2>Enthusiast: $35</h2>
+    </header>
+    <div class="enthusiast"></div>
+  </article>
+  <article class="member-group">
+    <header>
+      <h2>Activist: $60</h2>
+    </header>
+    <div class="activist"></div>
+  </article>
+  <article class="member-group">
+    <header>
+      <h2>Advocate: $150</h2>
+    </header>
+    <div class="advocate"></div>
+  </article>
+  <article class="member-group">
+    <header>
+      <h2>Diplomat: $250</h2>
+    </header>
+    <div class="diplomat"></div>
+  </article>
+  <article class="member-group">
+    <header>
+      <h2>Benefactor: $500</h2>
+    </header>
+    <div class="benefactor"></div>
+  </article>
+  <article class="member-group">
+    <header>
+      <h2>Large Donors</h2>
+    </header>
+    <div>
+      <ul class="large-donors"></ul>
+    </div>
+
+  </article>
 </section>
 
 
