--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
 </section>
 
 <!-- build:js scripts/main.min.js -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="/node_modules/pym.js/dist/pym.js"></script>
 <script src="scripts/main.js"></script>
 <!-- endbuild -->
