edit slug, meta title

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>{{ META.graphic_title }} | The Texas Tribune</title>
+  <title>2015 Spring Membership Donors | The Texas Tribune</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- build:css styles/main.min.css -->
   <link rel="stylesheet" href="styles/main.css">
@@ -13,7 +13,7 @@
 
 <section class="graphic">
   <header>
-    <h1 class="font-xxl">Spring Membership 2015 Donors</h1>
+    <h1 class="font-xxl">2015 Spring Membership Donors</h1>
   </header>
 
   <article class="prose">
