--- a/app/index.html
+++ b/app/index.html
@@ -13,70 +13,66 @@
 
 <section class="graphic">
   <header>
-    <h1 class="font-xxl">2015 Spring Membership Donors</h1>
+    <h1 class="font-xl">2015 Spring Membership Donors</h1>
   </header>
 
   <article class="prose">
     <p>Donors and members subscribe to The Texas Tribune’s belief that promoting greater civic engagement and informed discourse is a direct route to a better and more productive Texas. They play no role in guiding the journalism produced by the Tribune or the planning and execution of events. </p>
     <p>If you are interested in becoming a donor or a member, click <a href="http://www.texastribune.org/join/">here</a>. </p>
     <p>When it comes to our <a href="https://www.texastribune.org/support-us/donors-and-members/">donors</a> and <a href="http://www.texastribune.org/support-us/corporate-sponsors/">corporate sponsors</a>, the Tribune is committed to full transparency.</p>
-    <p>
-    When donors or <a href="http://www.texastribune.org/support-us/corporate-sponsors/">corporate sponsors</a> who
-    have given $1,000 or more to the Tribune are named in our stories, we disclose
-    them on those pages. Donors who have given $5,000 or more are classified as
-    "major donors."
+    <p>When donors or <a href="http://www.texastribune.org/support-us/corporate-sponsors/">corporate sponsors</a> who
+    have given $1,000 or more to the Tribune are named in our stories, we disclose them on those pages. Donors who have given $5,000 or more are classified as "major donors."
     </p>
   </article>
   <article class="member-group">
     <header>
-      <h2>Student: $10</h2>
+      <h2>Major Donors</h2>
     </header>
-    <div class="student"></div>
+    <section class="large-donors"></section>
   </article>
   <article class="member-group">
     <header>
-      <h2>Enthusiast: $35</h2>
-    </header>
-    <div class="enthusiast"></div>
-  </article>
-  <article class="member-group">
-    <header>
-      <h2>Activist: $60</h2>
-    </header>
-    <div class="activist"></div>
-  </article>
-  <article class="member-group">
-    <header>
-      <h2>Advocate: $150</h2>
-    </header>
-    <div class="advocate"></div>
-  </article>
-  <article class="member-group">
-    <header>
-      <h2>Diplomat: $250</h2>
-    </header>
-    <div class="diplomat"></div>
-  </article>
-  <article class="member-group">
-    <header>
-      <h2>Benefactor: $500</h2>
+      <h2>Benefactor Members: $251-$500</h2>
     </header>
     <div class="benefactor"></div>
   </article>
   <article class="member-group">
     <header>
-      <h2>Large Donors</h2>
+      <h2>Diplomat Members: $250</h2>
     </header>
-    <div>
-      <ul class="large-donors"></ul>
-    </div>
-
+    <div class="diplomat"></div>
+  </article>
+  <article class="member-group">
+    <header>
+      <h2>Advocate Members: $61-$150</h2>
+    </header>
+    <div class="advocate"></div>
+  </article>
+  <article class="member-group">
+    <header>
+      <h2>Activist Members: $36-$60</h2>
+    </header>
+    <div class="activist"></div>
+  </article>
+  <article class="member-group">
+    <header>
+      <h2>Enthusiast Members: $11-$35</h2>
+    </header>
+    <div class="enthusiast"></div>
+  </article>
+  <article class="member-group">
+    <header>
+      <h2>Student Members: Up to $10</h2>
+    </header>
+    <div class="student"></div>
   </article>
 </section>
 
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
 <!-- build:js scripts/main.min.js -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="/node_modules/pym.js/dist/pym.js"></script>
+<script src="/node_modules/jquery/dist/jquery.js"></script>
+<!-- <script src="/node_modules/pym.js/dist/pym.js"></script> -->
+<script src="scripts/pym.min.js"></script>
 <script src="scripts/main.js"></script>
 <!-- endbuild -->
 </body>
