add sort, new array

--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,12 @@
   </article>
   <article class="member-group">
     <header>
+      <h2>Major Donors: $501-$999</h2>
+    </header>
+    <div class="large"></div>
+  </article>
+  <article class="member-group">
+    <header>
       <h2>Benefactor Members: $251-$500</h2>
     </header>
     <div class="benefactor"></div>
