--- a/app/index.html
+++ b/app/index.html
@@ -15,15 +15,6 @@
   <header>
     <h1 class="font-xl">2015 Spring Membership Donors</h1>
   </header>
-
-  <article class="prose">
-    <p>Donors and members subscribe to The Texas Tribune’s belief that promoting greater civic engagement and informed discourse is a direct route to a better and more productive Texas. They play no role in guiding the journalism produced by the Tribune or the planning and execution of events. </p>
-    <p>If you are interested in becoming a donor or a member, click <a href="http://www.texastribune.org/join/">here</a>. </p>
-    <p>When it comes to our <a href="https://www.texastribune.org/support-us/donors-and-members/">donors</a> and <a href="http://www.texastribune.org/support-us/corporate-sponsors/">corporate sponsors</a>, the Tribune is committed to full transparency.</p>
-    <p>When donors or <a href="http://www.texastribune.org/support-us/corporate-sponsors/">corporate sponsors</a> who
-    have given $1,000 or more to the Tribune are named in our stories, we disclose them on those pages. Donors who have given $5,000 or more are classified as "major donors."
-    </p>
-  </article>
   <article class="member-group">
     <header>
       <h2>Major Donors</h2>
@@ -72,6 +63,9 @@
     </header>
     <div class="student"></div>
   </article>
+</section>
+<section class="clear">
+  <div>&nbsp;</div>
 </section>
 
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
