last min changes

--- a/app/index.html
+++ b/app/index.html
@@ -11,54 +11,14 @@
 </head>
 <body>
 
-<section class="graphic">
-  <article class="member-group">
-    <header>
-      <h2>Major Donors</h2>
-    </header>
-    <section class="large-donors"></section>
-  </article>
-  <article class="member-group">
-    <header>
-      <h2>Major Donors: $501-$999</h2>
-    </header>
-    <div class="large"></div>
-  </article>
-  <article class="member-group">
-    <header>
-      <h2>Benefactor Members: $251-$500</h2>
-    </header>
-    <div class="benefactor"></div>
-  </article>
-  <article class="member-group">
-    <header>
-      <h2>Diplomat Members: $250</h2>
-    </header>
-    <div class="diplomat"></div>
-  </article>
-  <article class="member-group">
-    <header>
-      <h2>Advocate Members: $61-$150</h2>
-    </header>
-    <div class="advocate"></div>
-  </article>
-  <article class="member-group">
-    <header>
-      <h2>Activist Members: $36-$60</h2>
-    </header>
-    <div class="activist"></div>
-  </article>
-  <article class="member-group">
-    <header>
-      <h2>Enthusiast Members: $11-$35</h2>
-    </header>
-    <div class="enthusiast"></div>
-  </article>
-  <article class="member-group">
-    <header>
-      <h2>Student Members: Up to $10</h2>
-    </header>
-    <div class="student"></div>
+<section class="graphic member-group">
+  <article>
+    <section class="donors"></section>
+    <section class="student">
+      <header>
+        <h3>Less than $10</h3>
+      </header>
+    </section>
   </article>
 </section>
 <section class="clear">
